[project]
name = "opensync"
version = "0.0.1"
description = "An open source synchronizer for velocimetry of fluids."
authors = [
    {name = "Erich Zimmer"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib (>=3.6)",
    "numpy (>=1.24.0)",
    "pyserial (>=3.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
